# PMF-MHD-recomb

./: .gitignore  README.md  environment.yml  pyproject.toml
analysis/: baseline_tests.ipynb  sample.ipynb
analysis/.ipynb_checkpoints/: sample-checkpoint.ipynb
scripts/: test_grids.py
src/PMF_MHD_recomb.egg-info/: PKG-INFO  SOURCES.txt
src/pmhd/: cons.py  pars.py  pars2.py
src/pmhd/data/: grids.py
src/pmhd/data/.ipynb_checkpoints/: grids-checkpoint.py
src/pmhd/data/pre_stored_data/: B0arr.npy  abarinterpmaster.pkl  bbarinterpmaster.pkl  cbarinterpmaster.pkl  tau0arr.npy  zcrossarr.npy  zfsarr.npy
src/pmhd/data/pre_stored_data/f2bars_dict/: f2bars_m0_dict_zch_0.pkl  f2bars_m0_dict_zch_1.pkl  f2bars_m0_dict_zch_10.pkl  f2bars_m0_dict_zch_100.pkl  f2bars_m0_dict_zch_1000.pkl  f2bars_m0_dict_zch_1001.pkl  f2bars_m0_dict_zch_1002.pkl  f2bars_m0_dict_zch_1003.pkl  (+3892 more)
src/pmhd/physics/: FSR_TLA_Tfs.py  FSR_TLA_Tfs_Tb.py  FSR_saha_Tfs.py  TCR_Tfs.py  TCR_Tfs_FM.py  angle_avging_TLA.py  angle_avging_TLA_Tb.py  angle_avging_opt_depth.py  angle_avging_saha.py  cont_source.py  corrs_corr_and_source_fncs.py  cross_corr_and_source_funcs_Tb.py  firstOmoments_and_secondO_soln_PRD_fullk.py  hompsd.py  inhomo_moments.py  opt_depth.py  slurmloop_FSR_saha.py  slurmloop_ang_avging_TLA.py  slurmloop_ang_avging_opt_depth.py  visib_integ.py  xe2.py  xe2_Tb.py
src/pmhd/physics/.ipynb_checkpoints/: TCR_Tfs-checkpoint.py  angle_avging_TLA-checkpoint.py  corrs_corr_and_source_fncs-checkpoint.py  slurmloop_FSR_TLA-checkpoint.py  slurmloop_TCR_PRD-checkpoint.py
