[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PMF-MHD-recomb"
version = "0.1.0"
description = "Evolution of primordial magnetic fields and fluid variables"
authors = [{ name = "Jonathan Schiff" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

